--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <title>UPS Wage Calculator</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="icon" href="images/ups.ico" type="image/x-icon">
+    <meta property="og:title" content="UPS Wage Calculator">
+    <meta property="og:description" content="Calculate your UPS wages with ease. Created By Leandro Paulino">
+    <meta property="og:image" content="images/ups.ico">
 </head>
 <body>
     <script src="script.js"></script>
