--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta property="og:title" content="UPS Wage Calculator">
     <meta property="og:description" content="Calculate your UPS wages with ease. Created By Leandro Paulino">
     <meta property="og:image" content="images/ups.ico">
+    <meta property="og:url" content="https://leopoldprime.github.io/UPS-Wage-Calculator/">
 </head>
 <body>
     <script src="script.js"></script>
