--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>UPS Wage Calculator</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="icon" href="images/ups.ico" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="UPS Wage Calculator">
     <meta property="og:description" content="Calculate your UPS wages with ease. Created By Leandro Paulino">
     <meta property="og:image" content="images/ups.ico">
@@ -71,7 +72,7 @@
         <p>Total Wage: <span id="totalWage"></span></p>
     </div>   
     <footer>
-        <p>Created by Leandro Paulino, No Association With United Parcel Service, The Colors Used On This Website Are Copyrighted by United Parcel Service</p>
+        <p href="#">Created by Leandro Paulino, No Association With United Parcel Service, The Colors Used On This Website Are Copyrighted by United Parcel Service</p>
     </footer>
 </body>
 </html>
