--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>UPS Wage Calculator</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="icon" href="images/ups.ico" type="image/x-icon">
+    <script src="script.js" type="text/javascript"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="UPS Wage Calculator">
     <meta property="og:description" content="Calculate your UPS wages with ease. Created By Leandro Paulino">
@@ -11,7 +12,6 @@
     <meta property="og:url" content="https://leopoldprime.github.io/UPS-Wage-Calculator/">
 </head>
 <body>
-    <script src="script.js"></script>
     <div id="customAlert">
         <div>
             <span id="customAlertText"></span>
